--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a:hover{
     padding: 10px;
 }
 .tarjetaMenu{
-    height: 110px;
+    height: 60px;
     width: 110px;
     background-color: #101010;
     border-radius: 3em;
@@ -39,16 +39,16 @@ a:hover{
     content: "";
     
     position: absolute;
-    height: 120px;
+    height: 70px;
     width: 120px;
-    background-image: conic-gradient(blue, 20deg, transparent 120deg);
+    background-image: conic-gradient(aqua, 20deg, transparent 120deg);
     animation: rodear 3s linear infinite;
     z-index: 15;
 }
 .tarjetaMenu::after{
     content: "";
     position: absolute;
-    height: 100px;
+    height: 50px;
     width: 100px;
     background-color: #101010;
     border-radius: 3em;
@@ -59,11 +59,11 @@ a:hover{
     display:flex;
     justify-content: center; 
     align-items: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .tarjetaTitSeccion{
-    height: 110px;
+    height: 70px;
     width: 300px;
     
     background-color: #101010;
@@ -79,7 +79,7 @@ a:hover{
 .tarjetaTitSeccion::after{
     content: "";
     position: absolute;
-    height: 100px;
+    height: 60px;
     width: 290px;
     
     background-color: #101010;
@@ -240,7 +240,7 @@ a:hover{
     position: absolute;
     height: 120px;
     width: 120px;
-    background-image: conic-gradient(aqua, 20deg, transparent 120deg);
+    background-image: conic-gradient(black 20deg, transparent 120deg);
     animation: rodear 3s linear infinite;
     z-index: 15;
 }
@@ -273,7 +273,7 @@ a:hover{
 }
 
 .tarjetaSS{
-    height: 110px;
+    height: 60px;
     width: 110px;
     background-color: #101010;
     border-radius: 3em;
@@ -288,7 +288,7 @@ a:hover{
 .tarjetaSS::after{
     content: "";
     position: absolute;
-    height: 100px;
+    height: 50px;
     width: 100px;
     background-color: #101010;
     border-radius: 3em;
@@ -300,7 +300,7 @@ a:hover{
     position: absolute;
     height: 120px;
     width: 120px;
-    background-image: conic-gradient(aqua, 20deg, transparent 120deg);
+    background-image: conic-gradient(black, 20deg, transparent 120deg);
     animation: rodear 3s linear infinite;
     z-index: 15;
 }
@@ -313,7 +313,7 @@ a:hover{
     padding-bottom: 50px;
 }
 .contenedorINpro{
-    display:flex;
+    display: flex;
     justify-content: space-between; 
     align-items: center;
     padding: 10px;
@@ -354,4 +354,8 @@ input, textarea{
     color: aqua;
     box-shadow: 0 0 20px aqua;
     border: 0;
+}
+
+#img{
+    box-shadow: 0 0 40px blue;
 }
